--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
