--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weather_api",
   "version": "1.0.0",
   "description": "This is my new description of the weather _api for week 5",
+  "main": "index.js",
   "type": "module",
   "engines": {
     "node": ">- 18.12 <21"
