--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "node": ">- 18.12 <21"
   },
   "scripts": {
+    "start": "node dist/src/server.js",
+    "dev": "nodemon dist/src/index.js",
+    "build": "tsc -p tsconfig.json",
+    "build:watch": "tsc -w -p tsconfig.json",
+    "dev:start": "nodemon dist/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
